👷 Update .upptimerc.yml

--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -9,6 +9,7 @@ sites:
     url: https://access.fowapps.com
 
 status-website:
+  publish: true
   # Add your custom domain name, or remove the `cname` line if you don't have a domain
   # Uncomment the `baseUrl` line if you don't have a custom domain and add your repo name there
   cname: status.fowapps.com
