--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -3,7 +3,7 @@ owner: FowApps # Your GitHub organization or username, where this repository liv
 repo: upptime # The name of this repository
 
 sites:
-  - name: FowCRM.com
+  - name: Website (FowCRM.com)
     url: https://fowcrm.com
   - name: FowAccess
     url: https://access.fowapps.com
