--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -15,6 +15,7 @@ status-website:
   cname: status.fowapps.com
   # baseUrl: /upptime
   logoUrl: https://raw.githubusercontent.com/FowApps/upptime/master/assets/fowapps-logo-circle-transparent.png
+  favicon: https://raw.githubusercontent.com/FowApps/upptime/master/assets/fowapps-logo-circle-transparent.png
   name: FowApps Status Page
   # introTitle: "**Upptime** is the open-source uptime monitor and status page, powered entirely by GitHub."
   # introMessage: Welcome
@@ -23,6 +24,5 @@ status-website:
       href: /
     - title: GitHub
       href: https://github.com/$OWNER/$REPO
-
 # Upptime also supports notifications, assigning issues, and more
 # See https://upptime.js.org/docs/configuration
