👷 Update .upptimerc.yml

--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -25,5 +25,9 @@ status-website:
       href: /
     - title: GitHub
       href: https://github.com/$OWNER/$REPO
+
+workflowSchedule:
+  responseTime: "0 23 * * *"
+
 # Upptime also supports notifications, assigning issues, and more
 # See https://upptime.js.org/docs/configuration
